--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -11,9 +11,12 @@
 \href{https://kartikgt.github.io/}{\texttt{kartikgt.github.io}}\\
 \Sep
 \textbf{Mail} \\
-\texttt{kartikgt23@gmail.com}\\
+\href{mailto:kartikgt23@gmail.com}{\texttt{kartikgt23@gmail.com}}\\
 \Sep
 \textbf{Contact} \\
+(+91) 9800131277\\
+\Sep
+\textbf{Address}\\
 123, Society, \\ % Address 1
 Bangalore, Karnatka \\ % Address 2
 \vfill % Whitespace under this block to push it up under the photo
@@ -23,9 +26,7 @@ Bangalore, Karnatka \\ % Address 2
 \begin{document}
 
 \userinformation
-
 \framebreak % End of the first column
-
 \cvheading{Kartik Gupta}
 
 %\cvsubheading{Data Engineer} % Subheading - your occupation/specialization
@@ -36,37 +37,26 @@ Bangalore, Karnatka \\ % Address 2
 \CVSection{Experience}
 \CVItem{Jun 2018 - present, \textit{Data Engineer - IT Consultant}, SAP Labs}{
 \begin{itemize}
-	\item Increased the BizX application uptime, reduced high latency jobs by 30%, and enhanced code
-efficiency by providing a data discovery platform Prism to the developers and customers for real time
-analytics of S2 jobs, API traffic, and ElasticAPM metrics.
-
-	\item Built a data lake in Hadoop HDFS using Spark jobs to collect data from various sources like
-Splunk, Elasticsearch, and MySQL DB, analyzed the data for business insights using Apache Hive,
-and created dashboards in Kibana for visualizing the KPIs.
-	\item Monitored the application and automated issue resolution by creating watchers and alerts which
-triggered troubleshooting python or shell scripts.
-	\item Managed the 25TB Hadoop cluster with 10 nodes and ensured efficient data processing of ~1
-billion transactions daily including business critical jobs and APIs traffic.
+	\item Increased the BizX application uptime, reduced high latency jobs by 30\%, and enhanced code efficiency by providing a data discovery platform Prism to the developers and customers for real time analytics of S2 jobs, API traffic, and ElasticAPM metrics.
+	\item Built a data lake in Hadoop HDFS using Spark jobs to collect data from various sources like Splunk, Elasticsearch, and MySQL DB, analyzed the data for business insights using Apache Hive, and created dashboards in Kibana for visualizing the KPIs.
+	\item Monitored the application and automated issue resolution by creating watchers and alerts which triggered troubleshooting python or shell scripts.
+	\item Managed the 25TB Hadoop cluster with 10 nodes and ensured efficient data processing of ~1 billion transactions daily including business critical jobs and APIs traffic.
 	\item Automated the ETL pipeline by using Jenkins and cronjobs, for reliable and real time insights.
 \end{itemize}
 }
 
 \CVItem{May 2017 - Jul 2017, \textit{Strategy Intern}, Nomura Finance}{
 \begin{itemize}
-	\item Executed a data governance project for the compliance of a broker back office data ecosystem with
-the newly introduced GDPR regulations by the European Union.
-\item Developed the solutions for ensuring data integrity, encryption of PIIs, and data mapping by
-identifying lineages between data present in 50,000+ schemas.
-\item Analyzed data for exception handling using SQL Developer and identified possible outliers.
+	\item Executed a data governance project for the compliance of a broker back office data ecosystem with the newly introduced GDPR regulations by the European Union.
+	\item Developed the solutions for ensuring data integrity, encryption of PIIs, and data mapping by identifying lineages between data present in 50,000+ schemas.
+	\item Analyzed data for exception handling using SQL Developer and identified possible outliers.
 \end{itemize}
 }
 
 \CVItem{May 2016 - Jul 2016, \textit{Consulting Intern}, Miebach Consulting}{
 \begin{itemize}
-	\item Identified key Indian ports and industries for targeted introduction of cold storage, CFS and ICDs to
-support existing supply chain systems.
-	\item Designed a pilot auto replenishment system for a retail client providing automated inventory
-replenishment and minimizing human errors.
+	\item Identified key Indian ports and industries for targeted introduction of cold storage, CFS and ICDs to support existing supply chain systems.
+	\item Designed a pilot auto replenishment system for a retail client providing automated inventory replenishment and minimizing human errors.
 \end{itemize}
 }
 \Sep
