--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -3,7 +3,7 @@
 \input{structure.tex}
 
 \userinformation{
-\begin{flushright}
+\begin{flushleft}
 \includegraphics[width=1.1\columnwidth]{photo.png}\\[\baselineskip] % Your photo
 \small % Smaller font size
 \Sep
@@ -19,8 +19,19 @@
 \textbf{Address}\\
 123, Society, \\ % Address 1
 Bangalore, Karnatka \\ % Address 2
+\Sep
+\textbf{Skills}\\
+\begin{tabular}{p{0.1\textwidth} p{0.1\textwidth}}
+\bluebullet Java &  \bluebullet C++\\
+\bluebullet Python &  \bluebullet Apache\\
+\end{tabular}
+
+\Sep
+\textbf{Skills}\\
+\bluebullet Vue.JS | Java | SQL | Scala | Linux | Shell scripting \\
+\bluebullet Apache Hadoop | Hive | HDFS | Ambari | Apache Spark \\
 \vfill % Whitespace under this block to push it up under the photo
-\end{flushright}
+\end{flushleft}
 }
 
 \begin{document}
