--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -4,7 +4,7 @@
 
 \userinformation{
 \begin{flushleft}
-\includegraphics[width=1.1\columnwidth]{photo.png}\\[\baselineskip] % Your photo
+\includegraphics[width=1.0\columnwidth]{photo.png}\\[\baselineskip] % Your photo
 \small % Smaller font size
 \Sep
 \textbf{Website} \\
@@ -16,20 +16,50 @@
 \textbf{Contact} \\
 (+91) 9800131277\\
 \Sep
-\textbf{Address}\\
-123, Society, \\ % Address 1
-Bangalore, Karnatka \\ % Address 2
-\Sep
-\textbf{Skills}\\
+\textbf{Programming}\\
 \begin{tabular}{p{0.1\textwidth} p{0.1\textwidth}}
-\bluebullet Java &  \bluebullet C++\\
-\bluebullet Python &  \bluebullet Apache\\
+\bluebullet Java & \bluebullet Python\\
+\bluebullet Shell & \bluebullet SQL\\
 \end{tabular}
 
 \Sep
-\textbf{Skills}\\
-\bluebullet Vue.JS | Java | SQL | Scala | Linux | Shell scripting \\
-\bluebullet Apache Hadoop | Hive | HDFS | Ambari | Apache Spark \\
+\textbf{Python Libraries}\\
+\begin{tabular}{p{0.15\textwidth}}
+\bluebullet Requests \\
+\bluebullet TensorFlow\\
+\bluebullet Keras\\
+\bluebullet Beautiful Soup\\
+\bluebullet Pandas\\
+\bluebullet Matplotlib\\
+\bluebullet Selenium\\
+\end{tabular}
+
+\Sep
+\textbf{Big Data Tools}\\
+\begin{tabular}{p{0.1\textwidth} p{0.1\textwidth}}
+\bluebullet Hadoop & \bluebullet Hive\\
+\bluebullet Grafana & \bluebullet Spark\\
+\bluebullet Jenkins  & \bluebullet Splunk\\
+\bluebullet MySQL & \bluebullet ELK\\
+\end{tabular}
+
+\Sep
+\textbf{Operating Systems}\\
+\begin{tabular}{p{0.1\textwidth} p{0.1\textwidth}}
+\bluebullet Windows & \bluebullet Linux\\
+\end{tabular}
+
+\Sep
+\textbf{Interests}\\
+\begin{tabular}{p{0.17\textwidth}}
+\bluebullet Football \\
+\bluebullet Formula One\\
+\bluebullet Science Fiction\\
+\bluebullet History and Arts\\
+\bluebullet Swimming\\
+\bluebullet Writing blogs\\
+\end{tabular}
+
 \vfill % Whitespace under this block to push it up under the photo
 \end{flushleft}
 }
@@ -42,49 +72,62 @@ Bangalore, Karnatka \\ % Address 2
 
 %\cvsubheading{Data Engineer} % Subheading - your occupation/specialization
 \CVSection{Education}
-\CVItem{2013 - 2018, \textit{Indian Institute of Technology Kharagpur}}{Integrated Dual Degree, Electronics and Electrical Engineering}
+\CVItem{2013 - 2018, \textit{Indian Institute of Technology Kharagpur}}{Integrated Dual Degree, Electronics and Electrical Engineering}{
+\begin{itemize}
+	\item \textbf{Masters' Thesis Project}: Translating Images to Natural Language Sentences using Deep Neural Networks for Captioning.
+	\item \textbf{Bachelors' Thesis Project}: Blur kernel estimation in images using a softmax criterion with a Convolutional Neural Network.
+\end{itemize}
+}
 \Sep
 
 \CVSection{Experience}
-\CVItem{Jun 2018 - present, \textit{Data Engineer - IT Consultant}, SAP Labs}{
+\CVItem{Jun 2018 - present, \textit{Big Data Engineer}, SAP SuccessFactors}{
 \begin{itemize}
-	\item Increased the BizX application uptime, reduced high latency jobs by 30\%, and enhanced code efficiency by providing a data discovery platform Prism to the developers and customers for real time analytics of S2 jobs, API traffic, and ElasticAPM metrics.
-	\item Built a data lake in Hadoop HDFS using Spark jobs to collect data from various sources like Splunk, Elasticsearch, and MySQL DB, analyzed the data for business insights using Apache Hive, and created dashboards in Kibana for visualizing the KPIs.
-	\item Monitored the application and automated issue resolution by creating watchers and alerts which triggered troubleshooting python or shell scripts.
-	\item Managed the 25TB Hadoop cluster with 10 nodes and ensured efficient data processing of ~1 billion transactions daily including business critical jobs and APIs traffic.
-	\item Automated the ETL pipeline by using Jenkins and cronjobs, for reliable and real time insights.
+	\item Member of the Integrations team of the Cloud Operations Board at SAP Labs, ensuring the operational goals are met and providing seamless integration between cloud based (HCM) applications.
+	\item Developed a data democratization platform for developers to manage and monitor their S2 jobs and APIs in real time enabling them to proactively predict and resolve issues before client impact.
+	\item Visualized the Application Performance Metrics (APM) in ELK for analyzing page latencies, traffic, and usage trends for applications. 
+	\item Created CI/CD paradigm on data pipelines to automate the Extract, Transform, Load (ETL) functions on batch and steaming data.
+	\item Applied Machine Learning models to predict job failures, possible downtimes and long running queries, and identified client specific trends for better management of resources during peak season
 \end{itemize}
 }
 
-\CVItem{May 2017 - Jul 2017, \textit{Strategy Intern}, Nomura Finance}{
+\CVItem{May 2017 - Jul 2017, \textit{Operations Intern}, Nomura Research Institute}{
 \begin{itemize}
-	\item Executed a data governance project for the compliance of a broker back office data ecosystem with the newly introduced GDPR regulations by the European Union.
-	\item Developed the solutions for ensuring data integrity, encryption of PIIs, and data mapping by identifying lineages between data present in 50,000+ schemas.
-	\item Analyzed data for exception handling using SQL Developer and identified possible outliers.
+	\item Executed a data governance project for the compliance of a broker back office data ecosystem with the data privacy GDPR guidelines.
+	\item Developed solutions for ensuring data integrity, encryption of PIIs, and data mapping by identifying lineages in 50,000+ schemas.
 \end{itemize}
 }
 
-\CVItem{May 2016 - Jul 2016, \textit{Consulting Intern}, Miebach Consulting}{
+\CVItem{May 2016 - Jul 2016, \textit{Summer Intern}, Miebach Consulting}{
 \begin{itemize}
-	\item Identified key Indian ports and industries for targeted introduction of cold storage, CFS and ICDs to support existing supply chain systems.
-	\item Designed a pilot auto replenishment system for a retail client providing automated inventory replenishment and minimizing human errors.
+	\item Identified key Indian ports and industries for introduction of cold storage, CFS and ICDs to support existing supply chain systems.
+	\item Formulated an Auto Replenishment System for a retail client to ensure constant stock availability and capacity prediction.
 \end{itemize}
 }
 \Sep
 
-\CVSection{Skills}
+\CVSection{Extra-Curricular}
 %\CVItem{Technical}
 %{\begin{tabular}{p{0.2\textwidth} p{0.2\textwidth} p{0.2\textwidth}}
 %\bluebullet Java &  \bluebullet Shell & \bluebullet Python\\
 %\end{tabular}}\\
 
-\CVItem{Technical}
-{\bluebullet Led a team of 50+ to conceptualize, plan, and execute 100+ events over four days as the Events
-Head at Spring Fest, the nation's biggest college socio-cultural fest with a participation of 30,00+.}
 
-\CVItem{Organizationsal}
-{\bluebullet Led a team of 50+ to conceptualize, plan, and execute 100+ events over four days as the Events
-Head at Spring Fest, the nation's biggest college socio-cultural fest with a participation of 30,00+.}
+\CVItem{April 2014 - May 2018, Spring Fest, cultural fest of IIT Kharagpur}{
+\begin{itemize}
+	\item \textit{Steering Committee Member}, Advised and mentored a team of 50+ students responsible for organizing and conducting the fest.
+	\item \textit{Events Head}, Responsible for conceptualizing, planning, and executing the events held during the 59th edition. Led a team of 25+ students and formed partnerships with 10+ associations.
+\end{itemize}
+}
+
+\CVItem{April 2016, Candidate for the President of the Students' Senate}{
+\begin{itemize}
+	\item Among the two candidates selected from a batch of 1400+ to contest for the top post in the student body. Presented the Statement of Purpose to 10,000+ students demonstrating public speaking skills. 
+	
+\end{itemize}
+}
+
+\textbf{MISSION} : I aim to develop a full stack Machine Learning Engineering skill-set and apply them to solve complex problems for organizations.
 
 %\Sep % Extra whitespace after the end of a major section
 %\clearpage % Start a new page
